Bug 195616 - Initial size of power management plasmoid is too small size
Summary: Initial size of power management plasmoid is too small size
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-08 01:44 UTC by Kamil Neczaj
Modified: 2009-06-11 17:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the screenshot (175.90 KB, image/png)
2009-06-08 14:41 UTC, Kamil Neczaj
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kamil Neczaj 2009-06-08 01:44:55 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

In kde 4.3 there is possibility to change size of power management plasmoid. BTW I really don't know what is aim of this feature if the default size is set well. The problem is that initial size is too small and controls doesn't fit into the plasmoid.

I'm using kde 4.3 beta 2, but I couldn't choose it when writing the report.
Comment 1 Dario Andres 2009-06-08 01:56:39 UTC
Size when the widget is placed on the Desktop or when it is placed on the Panel and you click the battery icon ? Thanks
Comment 2 Kamil Neczaj 2009-06-08 14:41:13 UTC
Created attachment 34366 [details]
the screenshot

It's not exactly the widget size, but the 'window' which appears when I click on the widget. The problem exists on the panel as well as on the desktop.
Comment 3 Kamil Neczaj 2009-06-08 18:25:43 UTC
It's strange, the problem vanish when I change plasma theme. The size is automatically set proper and I cannot shrink plasmoid to initial size, but when I add another battery plasmoid it's initial size is obviously wrong.
Comment 4 Aaron J. Seigo 2009-06-09 01:36:37 UTC
looks like a layout problem, possibly in QGraphics*Layout? it works for the dictionary plasmoid (uses a graphics widget) and the QWidget based plasmoids (kickoff, device notifier) .. but not the battery which is a graphics widget and uses much more complex (but looks correct) use of QGraphics*Layout
Comment 5 Dario Andres 2009-06-09 01:42:48 UTC
Another layouting issues: bug 189579 / bug 189006, also showing this issue. Should them be merged under a "bad layouting" title? Thanks
Comment 6 Marco Martin 2009-06-09 10:28:33 UTC
189579 is a dupe of 189006 
i'm not sure they are the same issue of this (well yeahalways qgraphicslayout borkage, hmm)
Comment 7 Artur Souza (MoRpHeUz) 2009-06-11 17:12:17 UTC
SVN commit 980351 by asouza:

This time it was not QGraphicsLayout issue: the brightness icon
was added to a second column that was not present before (the
whole layout has two columns basically).
Just went with the easiest solution: put the icon and the slider
in a LinearLayout and this one goes to the cell. Everything is
aligned now.

BUG:195616


 M  +6 -4      battery.cpp  
 M  +1 -0      battery.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=980351