This time it was not QGraphicsLayout issue: the brightness icon was added to a second column that was not present before (the whole layout has two columns basically). Just went with the easiest solution: put the icon and the slider in a LinearLayout and this one goes to the cell. Everything is aligned now.

BUG:195616

svn path=/trunk/KDE/kdebase/workspace/; revision=980351